# telegram-love-bot

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  alembic.ini  config.app.yaml  docker-compose.yml  pyproject.toml  start_dev.py
cities/: russia_aliases.txt
deployment/: gunicorn_app.py  options.py  run  run.py
locales/en/: common.ftl  create_update_profile.ftl  finding_profile.ftl  gender.ftl  main_menu.ftl  matches.ftl  profile.ftl
locales/ru/: common.ftl  create_update_profile.ftl  finding_profile.ftl  gender.ftl  main_menu.ftl  matches.ftl  profile.ftl
migrations/: env.py
migrations/versions/: 2025_08_15_2008-1dc8458be665_update.py  2025_08_16_1600-9a907f327a66_update.py  2025_08_16_1729-c245cd6e14d7_update.py  2025_08_16_1810-943257158b11_update.py  2025_08_19_0036-b49d42ce00c1_update.py  2025_08_19_0057-67642903d0b9_update.py
src/: di_container.py
src/bot/: __init__.py  app.py  cli.py  web.py  webhook_utils.py
src/bot/handlers/: disable_profile.py  find_profile.py  my_profile.py  show_matches.py  start.py
src/bot/middlewares/: user_language_middleware.py  user_middleware.py
src/bot/states/: create_profile.py  disable.py  editing_profile.py  find_profile.py  view_matches.py
src/bot/utils/: keyboard.py
src/common/domain/: aggregate.py  event.py  exception.py
src/db/: provider.py  session.py
src/modules/city/: find_city.py
src/modules/match/: container.py
src/modules/profile/: container.py
src/modules/user/: container.py
src/settings/: cities.py  const.py  logging_config.py  secrets.py
(+59 files in other folders)
