[project]
name = "lovebot"
version = "0.1.0"
description = ""
authors = [
    {name = "Thomas"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)",
    "pydantic (>=2.10.5,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "pydantic-extra-types (>=2.10.2,<3.0.0)",
    "sqlalchemy (>=2.0.36,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.14.0,<2.0.0)",
    "stories (>=5.1.0,<6.0.0)",
    "aiogram (>=3.21.0,<4.0.0)",
    "aiogram-i18n (>=1.4,<2.0)",
    "fluent-compiler (>=1.1,<2.0)",
    "fluent-runtime (>=0.4.0,<0.5.0)",
    "redis (>=6.4.0,<7.0.0)",
    "dishka (>=1.6.0,<2.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
